samples/_failures_safe/1761168547_41c566_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e088e246.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_e088e246.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
